--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     </header>
     <h2>Welcome</h2>
-    <p>This is my website showing my capabilities on digital fabrication and how well I document things.</p>
+    <p>This is my website showing my capabilities on digital fabrication and how well I document things on this site.</p>
     <h3>What we cover</h3>
     <p>I will be covering the foundations of digital fabrication and my journey through this module. For this module, i intend to prototype a...</p></body>
 </html>
