update to index.html assignment and navigation bar

--- a/index.html
+++ b/index.html
@@ -27,19 +27,16 @@ body, html {
 <!-- Links (sit on top) -->
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
-    <div class="w3-col s2">
+    <div class="w3-col s3">
       <a href="#" class="w3-button w3-block w3-black">HOME</a>
     </div>
-        <div class="w3-col s2">
-      <a href="#overview" class="w3-button w3-block w3-black">OVERVIEW</a>
-    </div>
-    <div class="w3-col s2">
+    <div class="w3-col s3">
       <a href="#about" class="w3-button w3-block w3-black">ABOUT ME</a>
     </div>
-    <div class="w3-col s2">
+    <div class="w3-col s3">
       <a href="#menu" class="w3-button w3-block w3-black">ASSIGNMENTS</a>
     </div>
-    <div class="w3-col s2">
+    <div class="w3-col s3">
       <a href="#where" class="w3-button w3-block w3-black">FINAL PROJECT</a>
     </div>
   </div>
@@ -91,22 +88,22 @@ body, html {
   
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'SF');" id="myLink">
-        <div class="w3-col s2 tablink w3-border">SAFETY FABLAB</div>
+        <div class="w3-col s6 tablink w3-border">SAFETY FABLAB</div>
       </a>
       <a href="javascript:void(0)" onclick="openMenu(event, 'PPTG');">
-        <div class="w3-col s2 tablink w3-border">PROTOTYPING PROJECT</div>
+        <div class="w3-col s6 tablink w3-border">PROTOTYPING</div>
       </a>
        <a href="javascript:void(0)" onclick="openMenu(event, 'WD');">
-        <div class="w3-col s2 tablink w3-border">WEBSITE DEVELOPMENT</div>
+        <div class="w3-col s6 tablink w3-border">WEBSITE DEVELOPMENT</div>
       </a>
              <a href="javascript:void(0)" onclick="openMenu(event, 'CAD');">
-        <div class="w3-col s2 tablink w3-border">COMPUTER AIDED DESIGN</div>
+        <div class="w3-col s6 tablink w3-border">COMPUTER AIDED DESIGN</div>
       </a>
                   <a href="javascript:void(0)" onclick="openMenu(event, 'PM');">
-        <div class="w3-col s2 tablink w3-border">3D PRINTING & MODELLING</div>
+        <div class="w3-col s6 tablink w3-border">3D PRINTING & MODELLING</div>
       </a>
                   <a href="javascript:void(0)" onclick="openMenu(event, 'EP');">
-        <div class="w3-col s2 tablink w3-border">ELECTRONICS PROJECT</div>
+        <div class="w3-col s6 tablink w3-border">ELECTRONICS</div>
       </a>
     </div>
 
@@ -143,7 +140,7 @@ body, html {
       <h5>Soda</h5>
       <p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>
     </div>  
-
+ 
         <div id="WD" class="w3-container menu w3-padding-48 w3-card">
       <h5>Coffee</h5>
       <p class="w3-text-grey">Regular coffee 3.50</p><br>
@@ -261,3 +258,4 @@ document.getElementById("myLink").click();
 
 </body>
 </html>
+
