UPDATE TO THE INDEX.HTML
the width size and making it look nicer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body, html {
       <a href="#about" class="w3-button w3-block w3-black">ABOUT ME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-black">ASSIGNMENTS</a>
+      <a href="#menu" class="w3-button w3-block w3-black">ASSIGMENTS</a>
     </div>
     <div class="w3-col s3">
       <a href="#where" class="w3-button w3-block w3-black">FINAL PROJECT</a>
@@ -60,7 +60,7 @@ body, html {
 
   <!-- About Container -->
 <div class="w3-container" id="overview">
-  <div class="w3-content" style="max-width:700px">
+  <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">OVERVIEW</span></h5>
     <p> In this module i learnt how to use Digital Fabrication techniques in designing and creating prototypes. During the process i have also learnt how to document and publish my work continously and this can be found under the Assignments tab. I used Computer Aided Design techniques, 3D printing and laser cutting methods to develop my prototypes and complete my assignments. </p>
   </div>
@@ -68,21 +68,21 @@ body, html {
 
 <!-- About Container -->
 <div class="w3-container" id="about">
-  <div class="w3-content" style="max-width:700px">
+  <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
     <p>Hello, my name is Razin Fahmi and I'm currently in my final year in Singapore Polytechnic studying under the Diploma of Mechanical Engineering. My current class is DME/FT/3A/01 and I'm specilising in Aerospace Engineering.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><strong>Email:</strong> razinfahmi12.19@ichat.sp.edu.sg</p>
       <p><strong>Telegram:</strong> @fahmibinhaizad</p>
     </div>
-    <img src="selfie.png" style="width:100%;max-width:1000px"  class="w3-margin-top">
-    <p>I've been leaning more towards the fabrication and manufacturing side of engineering, thus making me choose this elective module. Through EP1000, I was able to learn the basics of fabrication and prototyping through ways such as laser cutting, so that I can proudly apply these softskills learnt through this elective module in the future. I hope that through these efforts, I can widen my skillset and be a better Engineer.</p>
+        <h5 class="w3-center"><img src="selfie.png" style="width:45%;max-width:1000px"  class="w3-margin-top">
+    <p>I've been leaning more towards the fabrication and manufacturing side of engineering, thus making me choose this elective module. Through EP1000, I was able to learn the basics of fabrication and prototyping through ways such as laser cutting, and hopefully, I can proudly apply these softskills in the future. I hope that through these efforts, I can widen my skillset and be a better Engineer.</p>
   </div>
 </div>
 
 <!-- Menu Container -->
 <div class="w3-container" id="menu">
-  <div class="w3-content" style="max-width:700px">
+  <div class="w3-content" style="max-width:1600px">
  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">ASSIGNMENTS</span></h5>
   
@@ -214,7 +214,7 @@ body, html {
 
 <!-- Contact/Area Container -->
 <div class="w3-container" id="where" style="padding-bottom:32px;">
-  <div class="w3-content" style="max-width:700px">
+  <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">FINAL PROJECT</span></h5>
     <p>Find us at some address at some place.</p>
     <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
