--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ body, html {
     <h5>SAFETY FABLAB</h5>
       <p class="w3-text-grey">Before we were able to use any of the labs, equipments and machines for the module, there was a safety assessment that we had to score at least 90% to pass it. We had to watch a video and read through the safety issues in the lab where we learnt on the things we were allowed and not allowed to do in the in lab. After going through the necessary videos and slides, we then took the safety assessment to ensure we understood the requirements to use the labs.<br></br>
 
-      From the videos, slides and assessment, I learnt about:<br></br>
-      - General lab and workshop safety procedures such as, only work in the lab when there is supervision from either a lecturer or the technical support officer, and do not use any machinery without permission.<br></br>
+      <p class="w3-text-black">From the videos, slides and assessment, I learnt about:<br></p>
+      <p class="w3-text-grey">- General lab and workshop safety procedures such as, only work in the lab when there is supervision from either a lecturer or the technical support officer, and do not use any machinery without permission.<br></br>
       - Dress code when in lab to protect from injuries.<br>
            
            <p class="w3-center"><img src="maledresscode.png" style="width:50%;max-width:1200px" class="w3-margin-top"><br>
@@ -130,7 +130,7 @@ body, html {
 </div>
 
     <div id="WD" class="w3-container menu w3-padding-48 w3-card">
-      <h5>Coffee</h5>
+      <h5>WEBSITE DEVELOPMENT</h5>
       <p class="w3-text-grey">Regular coffee 2.50</p><br>
     
       <h5>Chocolato</h5>
