small edit to the texts

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ To start designing the website, create a text document and name it stylesheet, t
 
       <p class="w3-text-grey">If you would like to take back some changes that you have already pushed, you can simply right click the changes made in the history, and click revert this commit. This returns the previous version before the changes was made. Make sure to push to the origin again to confirm the revert.<br>
 
-        <p class="w3-center"><img src="githubrevert.png" style="width:70%;max-width:1200px"  class="w3-margin-top"><br>
+        <p class="w3-center"><img src="githubrevert.png" style="width:70%;max-width:1200px"  class="w3-margin-top"></p>
     
     </div>  
  
