--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ body, html {
       <a href="#about" class="w3-button w3-block w3-black">ABOUT ME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-black">ASSIGMENTS</a>
+      <a href="#assignments" class="w3-button w3-block w3-black">ASSIGMENTS</a>
     </div>
     <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-black">FINAL PROJECT</a>
+      <a href="#finalproject" class="w3-button w3-block w3-black">FINAL PROJECT</a>
     </div>
   </div>
 </div>
@@ -81,7 +81,7 @@ body, html {
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container" id="menu">
+<div class="w3-container" id="assignments">
   <div class="w3-content" style="max-width:1200px">
  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">ASSIGNMENTS</span></h5>
@@ -356,7 +356,7 @@ The hardware consist of the Arduino Uno, which is a microcontroller, resistors, 
 </div>
 
 <!-- Contact/Area Container -->
-<div class="w3-container" id="where" style="padding-bottom:32px;">
+<div class="w3-container" id="finalproject" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">FINAL PROJECT</span></h5>
     <h5>Final Project Idea</h5>
