--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ body, html {
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-black">HOME</a>
+      <a href="#home" class="w3-button w3-block w3-black">HOME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block w3-black">ABOUT ME</a>
+      <a href="#aboutme" class="w3-button w3-block w3-black">ABOUT ME</a>
     </div>
     <div class="w3-col s3">
       <a href="#assignments" class="w3-button w3-block w3-black">ASSIGMENTS</a>
@@ -67,7 +67,7 @@ body, html {
 </div>
 
 <!-- About Container -->
-<div class="w3-container" id="about">
+<div class="w3-container" id="aboutme">
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
     <p>Hello, my name is Razin Fahmi and I'm currently in my final year in Singapore Polytechnic studying under the Diploma of Mechanical Engineering. My current class is DME/FT/3A/01 and I'm specilising in Aerospace Engineering.</p>
