--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ void ShowYellow(){<br>
        <h5>Results</h5>
       <p class="w3-text-grey">results part with video and slides.<br>
 
-<p class="w3-center"><img src="togbutton.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
+<p class="w3-center"><img src="pressentationslide.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
   <p class="w3-center"><img src="togbutton.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br></br>
 
     <p class="w3-text-grey">In all, it was an enjoyable and fulfilling experience for my first Digital Fabrication and Prototyping project, especially since it works as intended. Despite the problems faced completing the project, it was very achievable until the very end. Given another opportunity to redo my workpiece into a better one, I am sure to improve it in ways such as enlarging the space to store the wirings, or reducing the stand heights to make the object smaller, or many more. <br></br>
