--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>EP1000 Digital Fabrication & Prototyping</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -388,20 +388,32 @@ The hardware consist of the Arduino Uno, which is a microcontroller, resistors, 
               <p class="w3-center"><img src="finalone.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
                 <p class="w3-center"><img src="finaltwo.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
                   <p class="w3-center"><img src="finalthree.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
-                    <p class="w3-center"><img src="finalfour.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br></br>
+                    <p class="w3-center"><img src="finalfour.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
+
+                      <p class="w3-text-grey"><a href="finalprojectbuild.f3d" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Moody Lamp 3D Model (f3d file)</a></p>
 
       <p class="w3-text-grey">With most of the built being made from the 5mm thick wood, the support for the top platform (blue in colour in the photos above), was 3D printed with the help of the Ultimaker 2+. <br>
 
 <p class="w3-center"><iframe src="https://ichat1336.autodesk360.com/shares/public/SH9285eQTcf875d3c539f59e0659298a0681?mode=embed" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe><br>
   <p class="w3-center"><img src="supportone.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
     <p class="w3-center"><img src="supporttwo.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
-      <p class="w3-center"><img src="supportthree.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br></br>
+      <p class="w3-center"><img src="supportthree.png" style="width:40%;max-width:1200px" class="w3-margin-top"><br>
+
+        <p class="w3-text-grey"><a href="finalproject3Dprint.f3d" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Support 3D Printing Model (f3d file)</a></p>
 
 <h5>Printing</h5>
       <p class="w3-text-grey">After designing, the models were converted into dxf files and stl files to be sent for laser cutting and 3D printing respectively. Following was how the final cut and 3D print turned out.<br>
 
         <p class="w3-center"><img src="finalcutwood.png" style="width:70%;max-width:1200px" class="w3-margin-top"><br>
-          <p class="w3-center"><img src="finalprint.png" style="width:70%;max-width:1200px" class="w3-margin-top"><br></br>
+          <p class="w3-center"><img src="finalprint.png" style="width:70%;max-width:1200px" class="w3-margin-top"><br>
+
+            <p class="w3-text-grey"><a href="dxffile/razin top platform dxf.dxf" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Top Platform (dxf file)</a></p>
+            <p class="w3-text-grey"><a href="dxffile/razin top cover dxf.dxf" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Top Cover (dxf file)</a></p>
+            <p class="w3-text-grey"><a href="dxffile/razin below cover dxf.dxf" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Bottom Cover (dxf file)</a></p>
+            <p class="w3-text-grey"><a href="dxffile/razin side walls 1 dxf.dxf" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Left and Right Walls (dxf file)</a></p>
+            <p class="w3-text-grey"><a href="dxffile/razin side walls 2 dxf.dxf" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Front and Back Walls (dxf file)</a></p>
+            <p class="w3-text-grey"><a href="dxffile/razin leg stands dxf.dxf" title="W3.CSS" target="_blank" class="w3-hover-text-black">Fusion 360 Leg Stands (dxf file)</a></p>
+
 
             <p class="w3-text-grey">With the help of hot glue and four M5 x 12 screw and nuts, the wooden pieces and printed support were then assembled together. Holes were also drilled onto one of the sides of the wooden pieces to allow way for the cable and the button to access the electronics inside.<br>
 
@@ -557,20 +569,24 @@ void ShowBlue(){<br>
 void ShowYellow(){<br>
   //**RGB(255,255,0) is Yellow**//  <br>
   colorWipe(strip.Color(255,   255,   0), 0);<br>
-}<br></br>
+}<br>
 
-<p class="w3-text-green">@Copyright 2021 <a href="Project_DistanceSensor/Project_DistanceSensor.ino" title="W3.CSS" target="_blank" class="w3-hover-text-white">codes</a></p>
+<p class="w3-text-grey"><a href="Project_DistanceSensor/Project_DistanceSensor.ino" title="W3.CSS" target="_blank" class="w3-hover-text-black">Arduino Moody Lamp Distance Sensor Code (ino file)</a></p>
               
-<p class="w3-text-grey">With all the wirings plugged into the respective ports and the Arduino Uno connected to the Arduino code, this was how it turned out.<br>
+<p class="w3-text-grey">With all the wirings plugged into the respective ports, this was how it looked like.<br>
 
   <p class="w3-center"><img src="wirings.png" style="width:50%;max-width:1200px" class="w3-margin-top"><br>
-    <p class="w3-center"><img src="videotoshowitworks.png" style="width:50%;max-width:1200px" class="w3-margin-top"><br>
 
        <h5>Results</h5>
-      <p class="w3-text-grey">results part with video and slides.<br>
 
-<p class="w3-center"><img src="presentationslide.png" style="width:95%;max-width:1200px" class="w3-margin-top"><br>
-  <p class="w3-center"><img src="ownershipcard.png" style="width:95%;max-width:1200px" class="w3-margin-top"><br></br>
+    <p class="w3-text-grey"><a href="video.png" title="W3.CSS" target="_blank" class="w3-hover-text-black">Video</a></p>
+  <p class="w3-center"><img src="video.png" style="width:100%;max-width:1200px" class="w3-margin-top"><br></br>
+
+      <p class="w3-text-grey"><a href="presentationslide.png" title="W3.CSS" target="_blank" class="w3-hover-text-black">Presentation Slide</a></p>
+<p class="w3-center"><img src="presentationslide.png" style="width:100%;max-width:1200px" class="w3-margin-top"><br></br>
+
+<p class="w3-text-grey"><a href="ownershipcard.png" title="W3.CSS" target="_blank" class="w3-hover-text-black">Ownership Card</a></p>
+  <p class="w3-center"><img src="ownershipcard.png" style="width:100%;max-width:1200px" class="w3-margin-top"><br></br>
 
     <p class="w3-text-grey">In all, it was an enjoyable and fulfilling experience for my first Digital Fabrication and Prototyping project, especially since it works as intended. Despite the problems faced completing the project, it was very achievable until the very end. Given another opportunity to redo my workpiece into a better one, I am sure to improve it in ways such as enlarging the space to store the wirings, or reducing the stand heights to make the object smaller, or many more. <br></br>
 
